# luxis

./: .env.template  .flake8  .gitignore  .luxis.template.toml  .pre-commit-config.yaml  README.md  luxis.toml  pyproject.toml
luxis/: cli.py  daemon.py
luxis/api/: endpoints.py
luxis/core/: embedding.py  hashing.py  indexing.py  scanner.py  schemas.py
luxis/index/: meta_index.py  vector_index.py
luxis/services/: query.py  update.py
luxis/utils/: daemon.py  exceptions.py  file_handler.py  logger.py  pid_handler.py  settings.py
