[project]
name = "luxis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tika @ git+https://github.com/Flushot/tika-python.git@flushot/tika-deprecation-warnings",
    "faiss-cpu",
    "sqlalchemy",
    "pydantic",
    "loguru>=0.7.3",
    "tiktoken>=0.12.0",
    "openai>=2.8.1",
    "click>=8.3.1",
]

[dependency-groups]
dev = [
    "ruff",
    "flake8",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    { git = "https://github.com/krauhen/codesnap.git" },
    "hatchling>=1.28.0",
]

[project.scripts]
luxis = "luxis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 130
fix = true
